metadata/objects/Vedamo_Session_Permalink__c.object
<CustomObject>
    <fields>
        <fullName>API_Object_Status__c</fullName>
        <defaultValue>&quot;active&quot;</defaultValue>
        <label>API Object Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Operation_Error__c</fullName>
        <label>API Operation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Operation_Status__c</fullName>
        <label>API Operation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Permalink_ID__c</fullName>
        <label>API Permalink ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permalink_Description__c</fullName>
        <label>Permalink Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Permalink_Key__c</fullName>
        <label>Permalink Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permalink_Name__c</fullName>
        <label>Permalink Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permalink_User_ID__c</fullName>
        <label>Permalink User ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Audio_Recieve__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Audio Recieve</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Audio_Send__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Audio Send</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Chat_In_Waiting_Room__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Chat In Waiting Room</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Chat_Private__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Chat Private</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Chat_View__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Chat View</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Chat_Write__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Chat Write</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_File_Download__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP File Download</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_File_Upload__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SP File Upload</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_File_View__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP File View</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Fixed_Mode__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Fixed Mode</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Groups_Randomly__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SP Groups Randomly</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Guests_Lock__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SP Guests Lock</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Layout__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>SP Layout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>in_class_digital_groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Presenter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SP Presenter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Room_Activated__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Room Activated</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Screen_Sharing__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Screen Sharing</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Simple_Mode__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SP Simple Mode</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_System_Check_Once__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SP System Check Once</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_System_Check__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP System Check</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Video_Individual_Show__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Video Individual Show</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Video_Layout__c</fullName>
        <defaultValue>&quot;custom&quot;</defaultValue>
        <label>SP Video Layout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>custom</fullName>
                </value>
                <value>
                    <fullName>synchronized</fullName>
                </value>
                <value>
                    <fullName>controlled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Video_Mosaic_Shown__c</fullName>
        <defaultValue>&quot;all&quot;</defaultValue>
        <label>SP Video Mosaic Shown</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>all</fullName>
                </value>
                <value>
                    <fullName>all_but_guests</fullName>
                </value>
                <value>
                    <fullName>all_with_camera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Video_Mosaic_View__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Video Mosaic View</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Video_Send__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Video Send</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Wait_For_Admin__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Wait For Admin</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Waiting_Room_Mode__c</fullName>
        <defaultValue>&quot;let_everyone_in&quot;</defaultValue>
        <label>SP Waiting Room Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>let_everyone_in</fullName>
                </value>
                <value>
                    <fullName>let_only_registered_users_in</fullName>
                </value>
                <value>
                    <fullName>let_noone_in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Whiteboard_Edit_All__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Whiteboard Edit All</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Whiteboard_Export__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SP Whiteboard Export</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Whiteboard_View__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Whiteboard View</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Whiteboard_Write__c</fullName>
        <defaultValue>1</defaultValue>
        <label>SP Whiteboard Write</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Description__c</fullName>
        <label>Session Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <label>Session Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Observers_Emails__c</fullName>
        <label>Session Observers Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Participants_Emails__c</fullName>
        <label>Session Participants Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Recordable__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Session Recordable</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <defaultValue>&quot;guest&quot;</defaultValue>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>default</fullName>
                </value>
                <value>
                    <fullName>guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vedamo Session Permalink</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Vedamo Permalink Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vedamo Session Permalinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>